# hplatec

./: .gitmodules  README.md  build-plate-tectonics.sh  hplatec.cabal
src/: Graphics.hs  Main.hs  Platec.hs  Platec.hsc
